# High-Performance-DFO

./: .gitignore  CMakeLists.txt  DFO.cpp  Makefile  README.md  original_DFO.py  readme_detail.md
experiments/: README.md  plot_results.py  run_cec2017.py  run_cec2017_neorl.py
figures_neorl/: table1_summary.csv  table1_summary.tex  table2_wilcoxon.csv  table2_wilcoxon.tex
include/: dfo_benchmark_functions.cuh  dfo_common.cuh  dfo_kernels.cuh  dfo_optimizer.cuh
results/: results.json
results/raw/: ackley_D1000_run00.json  ackley_D100_run00.json  rastrigin_D1000_run00.json  rastrigin_D100_run00.json  rosenbrock_D1000_run00.json  rosenbrock_D100_run00.json  sphere_D1000_run00.json  sphere_D100_run00.json
src/: benchmark.cu  dfo_gpu.cu
